Closed
Bug 409976
Opened 18 years ago
Closed 18 years ago
Cairo in trunk gives SIGBUS on SPARC
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta3
People
(Reporter: armin76, Assigned: armin76)
References
()
Details
Attachments
(1 file)
|
3.33 KB,
patch
|
vlad
:
review+
vlad
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.11) Gecko/20071216 BonEcho/2.0.0.11
Build Identifier:
Cairo in trunk, after the 29 nov update, is broken on SPARC due to bad alignments, resulting in SIGBUS when launching firefox-3.
This has been reported upstream and fixed in commitid: d8169b8cef041b4dbcea44e050df28659f4846aa
Reproducible: Always
Updated•18 years ago
|
Assignee: nobody → armin76
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: unspecified → Trunk
| Assignee | ||
Comment 1•18 years ago
|
||
| Assignee | ||
Comment 2•18 years ago
|
||
Comment on attachment 294834 [details] [diff] [review]
cairo.patch
Tested it on alpha/amd64/ia64/sparc/x86. Everything works fine. It's just commitid e82b0f46b2ea6ebcee5ea5cc09e9ab5c6cc383f
Attachment #294834 -
Flags: review?(vladimir)
Comment on attachment 294834 [details] [diff] [review]
cairo.patch
We can take this separately for now; I'm going to try to do a cairo update in about a week that should catch this and other this and other issues as well.
Attachment #294834 -
Flags: review?(vladimir)
Attachment #294834 -
Flags: review+
Attachment #294834 -
Flags: approval1.9+
Updated•18 years ago
|
Keywords: checkin-needed
Comment 4•18 years ago
|
||
Checking in gfx/cairo/cairo/src/cairo-path-fixed.c;
/cvsroot/mozilla/gfx/cairo/cairo/src/cairo-path-fixed.c,v <-- cairo-path-fixed.c
new revision: 1.15; previous revision: 1.14
done
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
You need to log in
before you can comment on or make changes to this bug.
Description
•