Bug 409976 - "Cairo in trunk gives SIGBUS on SPARC" [p=armin76@gentoo.org (Raúl Porcel) r+a1.9=vlad]